--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,11 @@ requires-python = ">=3.10"
 dependencies = [
     "click>=8.0",
     "requests>=2.28",
-    "pyarrow>=22.0.0",
+    "polars>=1.0.0",
     "tqdm>=4.67.1",
     "ftfy>=6.0",
     "mdformat>=0.7",
     "markdown-it-py>=3.0",
-    "pandas>=2.0",
 ]
 
 [project.optional-dependencies]
