--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "ftfy>=6.0",
     "mdformat>=0.7",
     "markdown-it-py>=3.0",
+    "aiohttp>=3.9",
 ]
 
 [project.optional-dependencies]
