--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
 dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
+    "pytest-asyncio>=0.23",
     "ruff>=0.1.0",
     "pyarrow>=14.0.0",
 ]
@@ -31,3 +32,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/extract_software_repos"]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
