--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "mdformat>=0.7",
     "markdown-it-py>=3.0",
     "aiohttp>=3.9",
+    "transformers>=4.36",
+    "torch>=2.0",
+    "python-Levenshtein>=0.23",
 ]
 
 [project.optional-dependencies]
