feat: add DuckDB for efficient paper record lookup
Adds load_papers_for_dois() that queries large JSONL files using
DuckDB SQL instead of loading all records into memory. Handles
2.5M+ records efficiently.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "transformers>=4.36",
     "torch>=2.0",
     "python-Levenshtein>=0.23",
+    "duckdb>=1.0",
 ]
 
 [project.optional-dependencies]
